--- a/style.css
+++ b/style.css
@@ -195,7 +195,7 @@ footer {
     background-size: cover;
 }
 
-.character-datails {
+.character-details {
     font-family: "Star Wars", sans-serif;
     font-size: 1rem;
     font-weight: lighter;
